# oratos

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  pyproject.toml  release-notes-v0.1.0.md
.github/actions/setup-oratos/: action.yml
.github/workflows/: ci.yml  code-quality.yml  dependencies.yml  oratos-audit-example.yml  publish-pypi.yml  release.yml  test-setup.yml
crates/oratos/: Cargo.toml
crates/oratos-audit/: Cargo.toml
crates/oratos-audit/src/: audit.rs  lib.rs  rules.rs  target.rs
crates/oratos-audit/tests/: audit_fixtures.rs  rule_cases.rs  url_audit.rs
crates/oratos-cli/: Cargo.toml
crates/oratos-cli/src/: changed.rs  main.rs
crates/oratos-core/: Cargo.toml
crates/oratos-core/src/: audit.rs  config.rs  finding.rs  lib.rs  location.rs  score.rs
crates/oratos-generate/: Cargo.toml
crates/oratos-generate/src/: lib.rs  llms.rs  metadata.rs  prompt.rs  prompt_phoenix.rs
crates/oratos-generate/src/llm/: mod.rs
crates/oratos-html/: Cargo.toml
crates/oratos-html/src/: extract.rs  lib.rs  load.rs  page.rs  robots.rs  sitemap.rs
crates/oratos-html/tests/: fixtures.rs  http_load.rs
crates/oratos-report/: Cargo.toml
crates/oratos-report/src/: console.rs  html.rs  json.rs  lib.rs  markdown.rs  sarif.rs
crates/oratos-report/src/snapshots/: oratos_report__console__tests__sample_console_report.snap  oratos_report__html__tests__sample_html_report.snap  oratos_report__json__tests__empty_report_json.snap  oratos_report__markdown__tests__sample_markdown_report.snap
crates/oratos/src/: changed.rs  lib.rs  main.rs
crates/oratos/src/audit/: mod.rs  rules.rs  run.rs  target.rs
crates/oratos/src/core/: audit.rs  config.rs  finding.rs  mod.rs  page.rs  score.rs
crates/oratos/src/generate/: llms.rs  metadata.rs  mod.rs  prompt.rs  prompt_phoenix.rs
crates/oratos/src/html/: extract.rs  load.rs  mod.rs  path.rs  sitemap.rs
crates/oratos/src/report/: console.rs  html.rs  json.rs  markdown.rs  mod.rs  sarif.rs
crates/oratos/src/report/snapshots/: oratos__report__console__tests__sample_console_report.snap  oratos__report__json__tests__empty_report_json.snap  oratos__report__markdown__tests__sample_markdown_report.snap
crates/oratos/tests/: audit_fixtures.rs  cli.rs  fixtures.rs  http_load.rs  rule_cases.rs  url_audit.rs
docs/: architecture.md  ci.md  configuration.md  install.md  json-schema.md  llm-providers.md  llms-txt.md  phoenix.md  publishing.md  remediation-prompts.md  reports.md  roadmap.md  rules.md  scoring.md  v0.2-backlog-issues.md
docs/decisions/: 0001-project-skeleton.md  0002-scoring-weights.md  0003-sarif-output.md  0004-site-level-rules.md  0005-rule-registry.md  0006-config-file.md
docs/integrations/: node-python.md  pre-commit.md
docs/tutorials/: 01-why-website-visibility.md  02-html-extraction-and-page-models.md  03-seo-rules-as-deterministic-checks.md  04-accessibility-basics-for-developers.md  05-structured-data-and-json-ld.md  06-llm-readiness-and-llms-txt.md  07-ci-cd-quality-gates.md  08-phoenix-and-mix-workflows.md  09-remediation-prompts.md  10-future-framework-adapters.md
examples/: oratos.toml.example
examples/phoenix_static_export/: index.html
examples/static_site/: docs.html  index.html
packaging/: README.md
packaging/asdf-oratos/: .gitignore  README.md
packaging/hex/: .gitignore  README.md  mix.exs
packaging/hex/lib/: oratos.ex
packaging/hex/lib/mix/tasks/: oratos.audit.ex  oratos.ex
packaging/homebrew/: README.md  oratos.rb
packaging/npm/: README.md  package.json
packaging/npm/scripts/: install.js
packaging/scoop/: README.md  oratos.json
scripts/: install.sh  publish-crates.sh
testdata/broken_site/: index.html
testdata/good_site/: about.html  index.html
testdata/link_resolution_site/: about.html  index.html
testdata/minimal_site/: index.html
testdata/phoenix_export/: index.html
testdata/suffix_collision_site/: index.html  our-about.html
