[workspace]
resolver = "2"
members = ["crates/oratos"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/latentmeta/oratos"
homepage = "https://github.com/latentmeta/oratos"
documentation = "https://docs.rs/oratos"
readme = "README.md"
authors = ["latentmeta"]
keywords = ["seo", "accessibility", "audit", "html", "llm"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
description = "Website visibility intelligence for SEO, accessibility, structured metadata, and AI readiness."

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
quick-xml = "0.37"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
walkdir = "2"
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"
