[package]
name = "oratos-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic audit rules for Oratos"

[dependencies]
oratos-core = { workspace = true }
oratos-html = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
