[package]
name = "oratos-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oratos-audit"
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic audit rules for Oratos"
[dependencies]
oratos-core = { workspace = true }
oratos-html = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
wiremock = { workspace = true }
