[package]
name = "oratos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[[bin]]
name = "oratos"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
oratos-audit = { workspace = true }
oratos-core = { workspace = true }
oratos-generate = { workspace = true }
oratos-html = { workspace = true }
oratos-report = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
