[package]
name = "oratos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oratos-core"
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and scoring for Oratos website visibility audits"
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
