[package]
name = "oratos-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Recommendation and prompt generation for Oratos"

[dependencies]
oratos-audit = { workspace = true }
oratos-core = { workspace = true }
oratos-html = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
