[package]
name = "oratos-generate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oratos-generate"
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Recommendation and prompt generation for Oratos"
[dependencies]
oratos-audit = { workspace = true }
oratos-core = { workspace = true }
oratos-html = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
