[package]
name = "oratos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "oratos"
path = "src/lib.rs"

[[bin]]
name = "oratos"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta = { workspace = true }
predicates = "3"
tempfile = "3"
wiremock = { workspace = true }
